<resources>
    <string name="app_name">헬스잇</string>
    <string name="title_nutrition">영양정보</string>
    <string name="title_tip">운동팁</string>
    <string name="title_notes">운동 일지</string>
    <string name="title_weight">몸무게</string>
    <string name="title_timer">타이머</string>

    <string name="blank">\u0020</string>

    <string name="text_full_body">무분할</string>
    <string name="text_2day_split">2분할</string>
    <string name="text_3day_split">3분할</string>
    <string name="text_4day_split">4분할</string>
    <string name="text_5day_split">5분할</string>
    <string name="text_strength">스트렝스</string>
    <string name="text_common_sense">운동 상식</string>
    <string name="text_common_sense_diet">다이어트 상식</string>

    <string name="text_name_work_out">운동 이름</string>
    <string name="text_weight">무게</string>
    <string name="text_set">세트</string>
    <string name="text_reps">반복수</string>
    <string name="hint_routine_name">루틴 이름을 입력하세요.</string>
    <string name="source">출처 : </string>
    <string name="my_routine">내 운동 루틴 설정</string>

    <string name="title_hint">제목</string>
    <string name="content_hint">메모</string>
    <string name="title_no">제목없음</string>
    <string name="content_no">메모없음</string>

    <string name="action_save">저장</string>
    <string name="action_edit">편집</string>
    <string name="action_edit_on">on</string>
    <string name="action_edit_off">off</string>
    <string name="action_delete">삭제</string>
    <string name="action_pin">고정</string>
    <string name="action_set">설정</string>
    <string name="select_tag">태그</string>

    <string name="gallery">갤러리</string>
    <string name="camera">카메라</string>
    <string name="url">URL</string>

    <string name="alert_no_memo">저장된 기록이 없습니다. \n\n 오른쪽 하단에 있는 추가버튼으로 \n 기록을 추가해보세요!</string>
    <string name="alert_delete">기록을 삭제하시겠습니까?</string>
    <string name="alert_title_url">URL로 이미지 추가</string>
    <string name="alert_url">가져올 외부 이미지 url를 입력하세요.</string>
    <string name="alert_save">작성중인 내용이 있습니다. 저장하시겠습니까?</string>
    <string name="alert_add_directly">현재 운동기록을 내 운동 루틴에 추가하시겠습니까?\n *이미 존재하는 루틴에 추가할 경우 자동으로 덮어쓰기 됩니다.</string>
    <string name="hint_tag">이름을 입력하세요</string>
    <string name="title_activity_settings">설정</string>

    <string-array name="alert_entries">
        <item>무음</item>
        <item>진동</item>
        <item>알림음</item>
        <item>진동과 알림음</item>
    </string-array>

    <string-array name="alert_values">
        <item>silent</item>
        <item>vibrate</item>
        <item>ring</item>
        <item>vibrate_and_ring</item>
    </string-array>

    <string-array name="ring_entries">
        <item>Light weight babe</item>
        <item>알림음1</item>
        <item>알림음2</item>
        <item>알림음3</item>
        <item>알림음4</item>
        <item>알림음5</item>
        <item>알림음6</item>
        <item>알림음7</item>
    </string-array>

    <string-array name="ring_values">
        <item>light_weight_babe</item>
        <item>ring1</item>
        <item>ring2</item>
        <item>ring3</item>
        <item>ring4</item>
        <item>ring5</item>
        <item>ring6</item>
        <item>ring7</item>
    </string-array>

    <!-- Main Activity -->
    <string name="notice_exit">뒤로가기를 한번 더 누르면 종료됩니다.</string>
    <string name="subscribe_success">구독해주셔서 감사합니다.</string>
    <string name="billing_error">구매가 정상적으로 이루어지지 않았습니다.</string>
    <string name="notice_network_connection">인터넷이 연결되지 않았습니다. \n 앱이 정상적으로 작동하지 않을 수 있습니다.</string>
    <string name="notice_update_complete">업데이트 다운로드가 완료되었습니다.</string>
    <string name="restart">재시작</string>

    <!-- Memo Fragment -->
    <string name="new_log">새 일지</string>
    <string name="open_my_routine">내 루틴 열기</string>

    <!-- Inbody Fragment -->
    <string name="text_body_weight">체중</string>
    <string name="text_skeletal_muscle">골격근량</string>
    <string name="text_fat_percentage">체지방률</string>
    <string name="text_kg">kg</string>
    <string name="text_percent">%</string>
    <string name="text_save_completed">저장완료</string>
    <string name="notice_preview">이 페이지는 미리보기 페이지입니다. \n 몸무게 기록 기능을 사용하시려면 Pro 버전으로 전환해주세요.</string>
    <string name="get_free_trial">헬스잇 Pro 무료 체험하기</string>

    <!-- Timer Fragment -->
    <string name="min">m</string>
    <string name="sec">s</string>

    <!-- SettingsFragment -->
    <string name="purchase_pro">헬스잇 Pro 버전 전환하기</string>
    <string name="suggestion_board">개발자에게 문의 및 건의</string>
    <string name="error_board">개발자에게 오류 알리기</string>
    <string name="rate_app">(๑˃̵ᴗ˂̵)و ♡ 앱 평가하기(부탁드립니다)</string>
    <string name="settings_toast">현재 타이머가 실행 중이므로 타이머 종료 후부터 설정이 적용됩니다.</string>
    <string name="silent">무음</string>
    <string name="vibrate">진동</string>
    <string name="ring">알림음</string>
    <string name="vibrate_and_ring">진동과 알림음</string>
    <string name="light_weight_babe">Light weight babe</string>
    <string name="ring1">알림음1</string>
    <string name="ring2">알림음2</string>
    <string name="ring3">알림음3</string>
    <string name="ring4">알림음4</string>
    <string name="ring5">알림음5</string>
    <string name="ring6">알림음6</string>
    <string name="ring7">알림음7</string>

    <!-- AddActivity -->
    <string name="notice_max_photo">사진은 최대 %1$d장까지만 업로드 가능합니다.</string>
    <string name="notice_max_img_capacity">%1$dMB 이상의 대용량 이미지는 불러올 수 없습니다.</string>
    <string name="notice_max_capacity">저장할 이미지의 총용량이 너무 큽니다. \n 이미지 개수를 줄여보세요!</string>
    <string name="notice_conflict_date">이미 해당 날짜에 기록이 존재합니다.</string>

    <!-- Memo Detail Activity-->
    <string name="no_title">제목이 없습니다</string>
    <string name="create_date">작성 날짜:%1$s</string>
    <string name="notice_pin">일지가 고정되어 리스트 상단에 노출됩니다.</string>
    <string name="add_success">루틴 추가 완료</string>
    <string name="screenshot_success">갤러리에 스크린샷 저장 완료</string>

    <!-- Set Template Activity -->
    <string name="routine_num">루틴%1$d</string>

    <!-- Permission -->
    <string name="deny_take_photo">권한 요청을 거부하여 사진 촬영을 실행할 수 없습니다.</string>
    <string name="deny_gallery">권한 요청을 거부하여 갤러리를 실행할 수 없습니다.</string>
    <string name="deny_screenshot">권한 요청을 거부하여 이미지를 저장할 수 없습니다.</string>
    <string name="deny_overlay">권한 요청을 거부하여 Floating 모드를 실행할 수 없습니다.</string>
    <string name="request_take_photo">사진 촬영을 위해서 접근 권한이 필요합니다.</string>
    <string name="request_gallery">갤러리 접근을 위해 권한이 필요합니다.</string>
    <string name="request_screenshot">스크린샷 저장을 위해 접근 권한이 필요합니다.</string>
    <string name="request_overlay">Floating 모드 실행을 위해 권한이 필요합니다.</string>
    <string name="deny_request">거부하셨습니다. 하지만 [설정] > [권한] 에서 권한을 허용할 수 있습니다.</string>

    <!-- Preference Titles -->
    <string name="alert_header">타이머 알림</string>
    <string name="memo_header">운동 일지</string>

    <!-- Alert Preferences -->
    <string name="ring_title">알림음 설정</string>
    <string name="alert_title">알림 모드</string>
    <string name="floating_title">Floating 모드</string>
    <string name="floating_is">타이머 실행 중에 화면을 벗어나면 미니타이머를 통해 다른 앱 상단에서 계속 재생됩니다.</string>

    <!-- Sync Preferences -->
    <string name="tag1_title">태그1 이름</string>
    <string name="tag2_title">태그2 이름</string>
    <string name="tag3_title">태그3 이름</string>
    <string name="tag4_title">태그4 이름</string>
    <string name="tag5_title">태그5 이름</string>
    <string name="tag6_title">태그6 이름</string>

    <!-- PrefRepository -->
    <string name="pref_vibrate_and_ring">vibrate_and_ring</string>
    <string name="pref_light_weight_babe">light_weight_babe</string>
    <string name="view_all">전체보기</string>
    <string name="red">빨간색</string>
    <string name="orange">주황색</string>
    <string name="yellow">노란색</string>
    <string name="green">초록색</string>
    <string name="blue">파란색</string>
    <string name="purple">보라색</string>
    <string name="no_tag">태그없음</string>
    <string name="touch_to_edit">(터치해서 수정)</string>
    <string name="basic_routine_name">루틴%1$d (설정되어 있지 않음)</string>

    <!-- MemoListAdapter -->
    <string name="memo_record">총 %1$d세트, %2$d볼륨</string>

    <!-- RecordListAdapter -->
    <string name="name_guide">(터치해서 수정)</string>
    <string name="notice_max_record">최대 %1$d개까지 생성 가능합니다.</string>

    <!-- menu_memo_detail -->
    <string name="menu_add_routine">내 루틴에 추가</string>
    <string name="menu_save_as_image">이미지로 저장</string>
    <string name="menu_delete">삭제</string>

    <!-- DialogUtil -->
    <string name="ok">확인</string>
    <string name="cancel">취소</string>
    <string name="dont_save">저장 안함</string>
    <string name="tag_name">태그%1$d 이름</string>
    <string name="create_my_routine">내 루틴 만들기</string>
    <string name="create_log_with_routine">내 루틴으로 새 일지 쓰기</string>
    <string name="routine_name_to_add">추가할 루틴 이름</string>
    <string name="add_to_my_routine">내 루틴에 추가하기</string>
    <string name="not_now">지금 안 함</string>
    <string name="restore_purchase">이전 구매 불러오기</string>
    <string name="free_trial">무료 체험</string>
    <string name="pro">Pro</string>
    <string name="free_trial_10_day">7일 무료 체험하기</string>
    <string name="all_ad_free">· 방해되는 모든 광고 제거.</string>
    <string name="get_calendarView">· 운동일지 달력 형태로 보기 활성화.</string>
    <string name="get_inbody_function">· 몸무게 및 근육, 지방 기록 기능 활성화.</string>
    <string name="notice_subscribe">7일 무료 체험 후 월 3,900원의 요금이 청구됩니다.</string>
    <string name="tip_use">사용 팁</string>

    <string name="google_play_license_key">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAllyQvfc3zFWQQ9rQnJ1fvi3qbf6sH3w/XNCEoUddLVrEF77DbnKJ3cikVOknYvI4ry8ujEO7FJQ8bzLTJO5yilMOHHW3Vjl6uMl2YeA+ajzG42o2BGptiq2pSnl+xvii1qOKdTVSxDLiznItH1MjfkSQs9WfGTYv3rha1FHsSxlIpYJiBH/c8M1VVyGSttafvRPmbkXQp+2ELmYXyRgbytnieCa02MfZXRjWOFWy2SuBzHCx8C9Kk6kL0QBIJYDrQ8epXiuCE8H76JDK+c9Wz2chjOkjjEonv1ZwSUmxcwXUflc71/gaks/vdKhHnp+1aWh83fDpL7zw19vTdPJovwIDAQAB</string>
    <string name="sku_subs">subscribe_pro_1_month</string>
    <string name="admob_app_id">ca-app-pub-6263138384822549~7206516262</string>
    <string name="banner_ad_unit_routine_fragment">ca-app-pub-6263138384822549/1954189581</string>
    <string name="banner_ad_unit_id2">ca-app-pub-6263138384822549/2641201248</string>
    <string name="banner_ad_unit_memo_fragment">ca-app-pub-6263138384822549/7318812859</string>
    <string name="banner_ad_unit_timer_fragment">ca-app-pub-6263138384822549/4692649518</string>
    <string name="banner_ad_unit_settings_fragment">ca-app-pub-6263138384822549/4516555540</string>
    <string name="banner_ad_unit_weight_fragment">ca-app-pub-6263138384822549/5454785310</string>
    <string name="interstitial_ad_unit_new_memo">ca-app-pub-6263138384822549/3767412519</string>
    <string name="banner_ad_unit_id_for_test">ca-app-pub-3940256099942544/6300978111</string>

</resources>
