<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_routine"
        android:icon="@drawable/ic_heart_24dp"
        android:title="@string/title_tip" />

    <item
        android:id="@+id/navigation_memo"
        android:icon="@drawable/ic_note_black_24dp"
        android:title="@string/title_notes" />

    <item
        android:id="@+id/navigation_inbody"
        android:icon="@drawable/ic_body_24"
        android:title="@string/title_weight" />

    <item
        android:id="@+id/navigation_timer"
        android:icon="@drawable/ic_timer_black_24dp"
        android:title="@string/title_timer" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/title_activity_settings" />
</menu>
