<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorCardView"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:layout_marginEnd="5dp"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pro"
            android:textColor="@color/colorSexyBlue"
            android:textStyle="bold"
            android:textSize="15sp" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/free_trial_10_day"
        android:textStyle="bold"
        android:textSize="28sp"
        android:layout_marginBottom="15dp"
        android:textColor="@android:color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_ad_free"
        android:textSize="15sp"
        android:textColor="@android:color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_calendarView"
        android:textSize="15sp"
        android:textColor="@android:color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_inbody_function"
        android:textSize="15sp"
        android:layout_marginBottom="5dp"
        android:textColor="@android:color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notice_subscribe"
        android:textSize="12sp"
        android:layout_marginBottom="25dp"
        android:textColor="@android:color/darker_gray" />

    <Button
        android:id="@+id/button_free_trial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/free_trial"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        android:background="@drawable/button_accent_color" />

</LinearLayout>