<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/action_pin"
        android:title=""
        app:showAsAction="always"
        android:actionLayout="@layout/layout_switch_pin"/>
    <item
        android:id="@+id/action_edit"
        android:title=""
        android:icon="@drawable/ic_edit_white_24dp"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_add_template"
        android:title="@string/menu_add_routine"
        android:icon="@drawable/ic_template_add_white_24dp"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_save_as_image"
        android:title="@string/menu_save_as_image"
        android:icon="@drawable/ic_photo_album_white_24dp"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_delete"
        android:title="@string/menu_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        app:showAsAction="ifRoom"/>

</menu>