<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundGrey"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/include_actionbar"
        />

    <EditText
        android:id="@+id/editText_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appbar"
        android:layout_marginTop="18dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:hint="@string/hint_routine_name"
        android:maxLength="20"
        android:autofillHints="루틴 이름을 입력하세요."
        android:inputType="text"
        />

<RelativeLayout
    android:id="@+id/layout_column"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/editText_name"
    android:layout_marginTop="18dp"
    android:layout_marginStart="18dp"
    android:layout_marginEnd="18dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerVertical="true"
        android:weightSum="10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_name_work_out"
            android:layout_gravity="center"
            android:layout_weight="4.3"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_weight"
            android:layout_gravity="center"
            android:layout_weight="1.5"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_set"
            android:layout_gravity="center"
            android:layout_weight="1.5"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_reps"
            android:layout_gravity="center"
            android:layout_weight="1.5"/>

    </LinearLayout>

    <ImageButton
        android:id="@+id/btn_add_record"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:background="@drawable/ic_plus_btn"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:src="?android:attr/selectableItemBackground"
        android:contentDescription="@string/app_name"
        />

</RelativeLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_record"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_column"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="18dp"/>

</RelativeLayout>