<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/imageView"
        android:src="@drawable/ic_url"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:scaleType="center"
        android:background="@color/colorPrimaryDark"
        android:contentDescription="@string/app_name" />
    <TextView
        android:id="@+id/textView_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_below="@+id/imageView"
        android:textColor="@android:color/white"
        android:paddingBottom="5dp"
        android:background="@color/colorPopOut"
        android:text="@string/alert_title_url"/>

    <EditText
        android:id="@+id/editText_url"
        android:inputType="textUri"
        android:layout_below="@+id/textView_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/alert_url" />

</RelativeLayout>